--- a/Main.html
+++ b/Main.html
@@ -42,7 +42,7 @@
 </nav>
 
   <div class="main">
-    <div class="page" id="home">
+    <div class="page section" id="home">
       <div id="homeContent">
       <h1>WILDWOOD CREATIONS</h1>
 
@@ -52,7 +52,7 @@
  
 
 
-    <div class="page" id="about">
+    <div class="page section" id="about">
       <h3>Don Kitt</h3>
 
       <p>Don Kitt was born and raised in Kenora, Ontario. As a child he spent a lot of time in the woods enjoying and observing nature. His natural talent for art translated to drawings of his love of nature, mythology and history.  As a teenager, he put aside his love of art and traveled whenever he could.  His trips often took him to BC and at the age of twenty he made BC his permanent home moving to Kamloops soon after.</p>
@@ -70,7 +70,7 @@
       </p>
     </div> <!-- end about -->
 
-    <div id="portfolio">
+    <div class="section" id="portfolio">
       <h2>Portfolio</h2>
       <div class="container">
         <div class="row align-items-start">
@@ -305,7 +305,7 @@
 
     </div><!-- end portfolio -->
 
-    <div class="page" id="contact">
+    <div class="page section" id="contact">
       <div id="contactContent">
         <h2>Connect with Don: </h2>
         <h4>info@wildwoodcreations.ca</h4>
@@ -320,9 +320,17 @@
 <script
   src="http://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous">
+    
+  </script>
+  <script src="jquery.waypoints.js"></script>
+ <script type="text/javascript" src="jquery.waypoints.min.js"></script>
+ <script type="text/javascript" src="noframework.waypoints.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="JavaScript.js"></script>
+ 
 
  
 </body>
