--- a/Main.html
+++ b/Main.html
@@ -32,7 +32,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-nav-demo">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#home">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
