--- a/wildwood.html
+++ b/wildwood.html
@@ -16,6 +16,12 @@
     <!-- Custom styles for this template -->
     <link href="wildwood.css" rel="stylesheet">
 
+
+    <!-- Font Awesome stylesheet -->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
+
+
   </head>
 
   <body id="page-top">
@@ -30,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger fas fa-info-circle" href="#about"> About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger fas fa-film" href="#portfolio"> Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger fas fa-at" href="#contact"> Contact</a>
             </li>
           </ul>
         </div>
@@ -315,7 +321,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Connect with Don:</h2>
             <p class="lead">info@wildwoodcreations.ca</p>
-            <a href="https://www.facebook.com/pg/WildwoodCreationsCarvings/photos/"><button class="fa fa-facebook-official" type="button"> Facebook</button></a>
+            <a href="https://www.facebook.com/pg/WildwoodCreationsCarvings/photos/"><button class="fab fa-facebook-square" type="button"> Facebook</button></a>
             
           </div>
         </div>
